Havana Bananas/terraform/modules/VPC/routes.tf

resource "aws_route" "public_internet_gateway" {
  count = length(var.public_subnets) > 0 ? 1 : 0

  route_table_id         = aws_route_table.public[0].id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.banana_sock_igw.id

}

resource "aws_route" "private_nat_gateway" {
  count = var.nat_count
  
  route_table_id         = aws_route_table.private[count.index].id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.banana_sock_nat[count.index].id
}
